# space-rover

./: .gitignore  README.md  RUN_DEMO_COMMANDS.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/space_rover/share/space_rover/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
space_rover/navigation/: nav_node.py
src/: README.md
src/space_rover/: package.xml  setup.cfg  setup.py
src/space_rover/docs/: README.md
src/space_rover/launch/: rover_sim.launch.py
src/space_rover/logs/: mission_log.csv
src/space_rover/space_rover/: dashboard.py  estop_widget.py  mission_logger.py  rover_status_node.py  test_node.py
src/space_rover/space_rover/navigation/: change_goal.py  nav_node.py  obstacle_avoidance.py  watchdog_node.py
src/space_rover/space_rover/sensors/: camera_node.py  estop_node.py  imu_node.py  lidar_node.py  terrain_classifier.py
src/space_rover/ui/: dashboard.html
src/space_rover/urdf/: rover.gazebo  rover.urdf.xacro
src/space_rover/worlds/: mars_terrain.sdf  mars_terrain.world
