<?xml version="1.0"?>
<package format="3">
  <name>space_rover</name>
  <version>0.0.0</version>
  <description>Space Rover Navigation Package</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
